frame/support/test/tests/construct_runtime_ui/abundant_where_param.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime where
		Block = Block,
		NodeBlock = Block,
		Block = Block1,
		UncheckedExtrinsic = Uxt,
	{}
}

fn main() {}
